_ya-tr-span data-index=_1-0_ data-translated=_true_ data-source-lang=_en_ data-target-lang=_ru_ data-value=_main_output.txt
  File "main.py", line 1
    py -m pip install Django==5.0.3
          ^
SyntaxError: invalid syntax


** Process exited - Return Code: 1 **
Press Enter to exit terminal